[package]
name = "reqwest"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = { version = "1.0", features = ["external-buffers"] }           
reqwest = { version = "0.12", features = [
    "json",
    "gzip",
    "brotli",
    "rustls-tls",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
once_cell = "1.21"  
smol_str = "0.3"
futures = "0.3"